tests/ui/auto_enum/non-stmt-expr.stderr
error: `#[auto_enum]` is required two or more branches or marker macros in total, there is no branch or marker macro in this statement
 --> $DIR/non-stmt-expr.rs:4:1
  |
4 | / fn b(x: bool) -> Option<impl Iterator<Item = u8>> {
5 | |     Some(
6 | |         #[auto_enum(Iterator)]
7 | |         if x { std::iter::once(0) } else { std::iter::repeat(1) },
8 | |     )
9 | | }
  | |_^

error: `#[auto_enum]` is required two or more branches or marker macros in total, there is no branch or marker macro in this statement
  --> $DIR/non-stmt-expr.rs:12:1
   |
12 | / fn c(x: bool) -> Option<impl Iterator<Item = u8>> {
13 | |     Some(
14 | |         #[auto_enum(Iterator)]
15 | |         match x {
...  |
19 | |     )
20 | | }
   | |_^
